# discord-bots

./: .gitignore  README.md  pyproject.toml
samples/: minimal_bot.py  slash_command_bot.py
